# deeptime

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
granite-forecasting-tool/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
granite-forecasting-tool/.streamlit/: secrets.toml.example
granite-forecasting-tool/granite_forecasting/: __init__.py  channel_mix.py  config.py  data_io.py  m4_hourly.py  plots.py  rolling.py  zero_shot.py
granite-forecasting-tool/tests/: test_data_io.py
granite-forecasting-tool/tests/fixtures/: m4_hourly_sample.csv
